tests/src/frontend/expand/invalid/macro_expr_as_id.sk
class C() {
  macro fun m(): void {
    this.#thisClassName
  }
}

fun main(): void {
  void
}
